solve navbar going out of screen

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -171,7 +171,7 @@ hr{
     background-color: var(--navbar-color);
     transition: 1s;
     position:fixed;
-    width:var(--navbar-width);
+    width:100vw;
     z-index:var(--navbar-zindex);
     min-height:var(--navbar-height);
 }
